--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,9 @@
 [election]
-validators_per_slot = 3
-approve_threshold = 2
+# Number of nilAV nodes randomly assigned per active HTX
+validators_per_htx = 2
+# Minimum number of positive (valid + signature OK) verifications required
+# to deem an HTX as verified
+approve_threshold = 1
 
-# Slot duration in milliseconds
+# Slot duration in milliseconds (server tick interval)
 slot_ms = 5000
