--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,9 @@ hex = "0.4"
 getrandom = "0.3"
 reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
 toml = "0.8"
+ethers = { version = "2.0", features = ["rustls", "ws"] }
+ethers-contract = "2.0"
+clap = { version = "4.5", features = ["derive", "env"] }
 
 [dev-dependencies]
 httpmock = "0.7"
@@ -29,3 +32,7 @@ path = "src/bin/server.rs"
 [[bin]]
 name = "nilav_node"
 path = "src/bin/nilav_node.rs"
+
+[[bin]]
+name = "contract_cli"
+path = "src/bin/contract_cli.rs"
