--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,8 @@ toml = "0.8"
 ethers = { version = "2.0", features = ["rustls", "ws"] }
 ethers-contract = "2.0"
 clap = { version = "4.5", features = ["derive", "env"] }
+ratatui = "0.29"
+crossterm = "0.29.0"
 
 [dev-dependencies]
 httpmock = "0.7"
