--- a/docker/Dockerfile.server
+++ b/docker/Dockerfile.server
@@ -3,26 +3,24 @@ WORKDIR /app
 
 COPY Cargo.toml Cargo.lock ./
 COPY src ./src
-COPY config.toml ./config.toml
+COPY config ./config
 COPY data ./data
+COPY out ./out
 
 RUN --mount=type=cache,target=/usr/local/cargo/registry \
     --mount=type=cache,target=/app/target \
-    cargo install --path . --bin server --root /out
+    cargo install --path . --bin nilcc_simulator --root /out
 
 FROM debian:bookworm-slim AS runtime
 WORKDIR /app
 RUN useradd -u 10001 -m appuser
-COPY --from=builder /out/bin/server /usr/local/bin/server
-COPY --from=builder /app/config.toml /app/config.toml
+COPY --from=builder /out/bin/nilcc_simulator /usr/local/bin/nilcc_simulator
+COPY --from=builder /app/config /app/config
 COPY --from=builder /app/data /app/data
 USER appuser
 
-ENV PORT=8080
-ENV CONFIG_PATH=/app/config.toml
+ENV CONFIG_PATH=/app/config/config.toml
 # Default path for HTXs JSON list (can be overridden via HTXS_PATH)
 ENV HTXS_PATH=/app/data/htxs.json
 
-EXPOSE 8080
-
-ENTRYPOINT ["/usr/local/bin/server"]
+ENTRYPOINT ["/usr/local/bin/nilcc_simulator"]
