--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "lib/forge-std"]
-	path = lib/forge-std
+[submodule "contracts/nilav-router/lib/forge-std"]
+	path = contracts/nilav-router/lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
