--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,9 +49,14 @@ clap = { version = "4.5", features = ["derive", "env"] }
 ratatui = "0.29"
 crossterm = "0.29.0"
 
+# Logging
+tracing = "0.1"
+tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi"] }
+
 # Utilities
 anyhow = "1.0"
 rand = "0.9"
+futures-util = "0.3"
 
 [dev-dependencies]
 httpmock = "0.8"
