--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: test-and-fmt
+name: CI
 
 on:
   push:
@@ -16,6 +16,8 @@ jobs:
 
       - name: Install Rust (stable)
         uses: dtolnay/rust-toolchain@stable
+        with:
+          components: rustfmt
 
       - name: Cache cargo
         uses: Swatinem/rust-cache@v2
@@ -25,5 +27,15 @@ jobs:
       - name: rustfmt check
         run: cargo fmt --all -- --check
 
+      - name: Install Foundry
+        uses: foundry-rs/foundry-toolchain@v1
+        with:
+          version: stable
+
+      - name: Build smart contract
+        run: |
+          cd contracts/nilav-router
+          forge build
+
       - name: Run tests
-        run: cargo test --all --verbose
+        run: cargo test --all
