--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,9 +2,7 @@ name: build-binaries
 
 on:
   push:
-    branches: [ main ]
     tags: [ "v*.*.*" ]
-
 jobs:
   build:
     name: build (${{ matrix.os }})
@@ -20,6 +18,17 @@ jobs:
 
       - name: Install Rust (stable)
         uses: dtolnay/rust-toolchain@stable
+
+      - name: Install Foundry
+        uses: foundry-rs/foundry-toolchain@v1
+        with:
+          version: stable
+
+      - name: Build smart contract
+        run: |
+          cd contracts/nilav-router
+          forge build
+          cd ../..
 
       - name: Cache cargo
         uses: Swatinem/rust-cache@v2
@@ -56,9 +65,10 @@ jobs:
           echo "ARTIFACT_NAME=${NAME}" >> "$GITHUB_ENV"
           echo "ARTIFACT_FILE=${NAME}.tar.gz" >> "$GITHUB_ENV"
           mkdir -p dist
-          cp target/release/server dist/server
+          cp target/release/nilcc_simulator dist/nilcc_simulator
           cp target/release/nilav_node dist/nilav_node
-          tar -C dist -czf "${NAME}.tar.gz" server nilav_node
+          cp target/release/monitor dist/monitor
+          tar -C dist -czf "${NAME}.tar.gz" nilcc_simulator nilav_node monitor
 
       - name: Upload artifacts (Linux/macOS)
         if: runner.os != 'Windows'
@@ -79,8 +89,9 @@ jobs:
           "ARTIFACT_NAME=$name" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
           "ARTIFACT_FILE=$name.zip" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
           New-Item -ItemType Directory -Path dist | Out-Null
-          Copy-Item target\release\server.exe dist\server.exe
+          Copy-Item target\release\nilcc_simulator.exe dist\nilcc_simulator.exe
           Copy-Item target\release\nilav_node.exe dist\nilav_node.exe
+          Copy-Item target\release\monitor.exe dist\monitor.exe
           Compress-Archive -Path dist\* -DestinationPath "$name.zip"
 
       - name: Upload artifacts (Windows)
