--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,6 +36,7 @@ services:
       - PRIVATE_KEY=0x59c6995e998f97a5a0044966f0945389dc9e86dae88c7a8412f4603b6b78690d
       - CONFIG_PATH=/app/config/config.toml
       - HTXS_PATH=/app/data/htxs.json
+      - CONTRACT_ADDRESS=0x5FbDB2315678afecb367f032d93F642f64180aa3
       - RUST_LOG=info
     networks:
       - nilav-network
@@ -56,6 +57,7 @@ services:
       - PRIVATE_KEY=0x2a871d0798f97d79848a013d4936a73bf4cc922c825d33c1cf7073dff6d409c6
       - CONFIG_PATH=/app/config/config.toml
       - HTXS_PATH=/app/data/htxs.json
+      - CONTRACT_ADDRESS=0x5FbDB2315678afecb367f032d93F642f64180aa3
       - RUST_LOG=info
     networks:
       - nilav-network
@@ -73,7 +75,7 @@ services:
         condition: service_healthy
     environment:
       - RPC_URL=http://anvil:8545
-      - CONTRACT_ADDRESS_FILE=/shared/contract_address.txt
+      - CONTRACT_ADDRESS=0x5FbDB2315678afecb367f032d93F642f64180aa3
       - PRIVATE_KEY=0xdbda1821b80551c9d65939329250298aa3472ba22feea921c0cf5d620ea67b97
       - RUST_LOG=info
     networks:
@@ -92,7 +94,7 @@ services:
         condition: service_healthy
     environment:
       - RPC_URL=http://anvil:8545
-      - CONTRACT_ADDRESS_FILE=/shared/contract_address.txt
+      - CONTRACT_ADDRESS=0x5FbDB2315678afecb367f032d93F642f64180aa3
       - PRIVATE_KEY=0x7c852118294e51e653712a81e05800f419141751be58f605c371e15141b007a6
       - NODE_ID=node-2
       - RUST_LOG=info
@@ -112,7 +114,7 @@ services:
         condition: service_healthy
     environment:
       - RPC_URL=http://anvil:8545
-      - CONTRACT_ADDRESS_FILE=/shared/contract_address.txt
+      - CONTRACT_ADDRESS=0x5FbDB2315678afecb367f032d93F642f64180aa3
       - PRIVATE_KEY=0x47e179ec197488593b187f80a00eb0da91f1b9d0b13f8733639f19c30a34926a
       - NODE_ID=node-3
       - RUST_LOG=info
@@ -132,7 +134,7 @@ services:
         condition: service_healthy
     environment:
       - RPC_URL=http://anvil:8545
-      - CONTRACT_ADDRESS_FILE=/shared/contract_address.txt
+      - CONTRACT_ADDRESS=0x5FbDB2315678afecb367f032d93F642f64180aa3
       - PRIVATE_KEY=0x8b3a350cf5c34c9194ca85829a2df0ec3153be0318b5e2d3348e872092edffba
       - NODE_ID=node-4
       - RUST_LOG=info
@@ -152,7 +154,7 @@ services:
         condition: service_healthy
     environment:
       - RPC_URL=http://anvil:8545
-      - CONTRACT_ADDRESS_FILE=/shared/contract_address.txt
+      - CONTRACT_ADDRESS=0x5FbDB2315678afecb367f032d93F642f64180aa3
       - PRIVATE_KEY=0x92db14e403b83dfe3df233f83dfa3a0d7096f21ca9b0d6d6b8d88b2b4ec1564e
       - NODE_ID=node-5
       - RUST_LOG=info
