--- a/docker/Dockerfile.anvil
+++ b/docker/Dockerfile.anvil
@@ -5,17 +5,16 @@ WORKDIR /app
 
 USER root
 # Install curl for health checks
-RUN apt-get update -y && apt-get install -y curl
+RUN apt-get update -y && apt-get install -y curl jq
 
 # Copy contract files
 COPY contracts ./contracts
 
 # Copy scripts
-COPY contracts/nilav-router/scripts/deploy-contract.sh /usr/local/bin/deploy-contract.sh
 COPY docker/start-anvil.sh /usr/local/bin/start-anvil.sh
 
-RUN chmod +x /app/contracts/nilav-router/scripts/* && \
-    chown foundry:foundry /app/contracts/nilav-router/scripts/*
-    
+RUN chmod +x /app/contracts/script/* && \
+    chown foundry:foundry /app/contracts/script/*
+
 RUN chmod +x /usr/local/bin/start-anvil.sh && \
     chown foundry:foundry /usr/local/bin/start-anvil.sh
