--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,14 +8,15 @@ services:
     container_name: nilav-anvil
     environment:
       - RPC_URL=http://localhost:8545
-      - DEPLOYER_PRIVATE_KEY=0xac0974bec39a17e36ba4a6b4d238ff944bacb478cbed5efcae784d7bf4f2ff80
+      - PRIVATE_KEY=0xac0974bec39a17e36ba4a6b4d238ff944bacb478cbed5efcae784d7bf4f2ff80
+      - PUBLIC_KEY=0xf39Fd6e51aad88F6F4ce6aB8827279cffFb92266
     command: /usr/local/bin/start-anvil.sh
     ports:
       - "8545:8545"
     networks:
       - nilav-network
     healthcheck:
-      test: ["CMD-SHELL", "curl -sf -X POST -H 'Content-Type: application/json' --data '{\"jsonrpc\":\"2.0\",\"method\":\"eth_blockNumber\",\"params\":[],\"id\":1}' http://localhost:8545 || exit 1"]
+      test: [ "CMD-SHELL", "curl -sf -X POST -H 'Content-Type: application/json' --data '{\"jsonrpc\":\"2.0\",\"method\":\"eth_blockNumber\",\"params\":[],\"id\":1}' http://localhost:8545 || exit 1" ]
       interval: 5s
       timeout: 5s
       retries: 20
@@ -34,9 +35,12 @@ services:
     environment:
       - RPC_URL=http://anvil:8545
       - PRIVATE_KEY=0x59c6995e998f97a5a0044966f0945389dc9e86dae88c7a8412f4603b6b78690d
+      - PUBLIC_KEY=0x70997970C51812dc3A010C7d01b50e0d17dc79C8
       - CONFIG_PATH=/app/config/config.toml
       - HTXS_PATH=/app/data/htxs.json
-      - CONTRACT_ADDRESS=0x5FbDB2315678afecb367f032d93F642f64180aa3
+      - ROUTER_CONTRACT_ADDRESS=0x9fe46736679d2d9a65f0992f2272de9f3c7fa6e0
+      - STAKING_CONTRACT_ADDRESS=0xe7f1725e7734ce288f8367e1bb143e90bb3f0512
+      - TOKEN_CONTRACT_ADDRESS=0x5fbdb2315678afecb367f032d93f642f64180aa3
       - RUST_LOG=info
     networks:
       - nilav-network
@@ -55,9 +59,12 @@ services:
     environment:
       - RPC_URL=http://anvil:8545
       - PRIVATE_KEY=0x2a871d0798f97d79848a013d4936a73bf4cc922c825d33c1cf7073dff6d409c6
+      - PUBLIC_KEY=0xa0Ee7A142d267C1f36714E4a8F75612F20a79720
       - CONFIG_PATH=/app/config/config.toml
       - HTXS_PATH=/app/data/htxs.json
-      - CONTRACT_ADDRESS=0x5FbDB2315678afecb367f032d93F642f64180aa3
+      - ROUTER_CONTRACT_ADDRESS=0x9fe46736679d2d9a65f0992f2272de9f3c7fa6e0
+      - STAKING_CONTRACT_ADDRESS=0xe7f1725e7734ce288f8367e1bb143e90bb3f0512
+      - TOKEN_CONTRACT_ADDRESS=0x5fbdb2315678afecb367f032d93f642f64180aa3
       - RUST_LOG=info
     networks:
       - nilav-network
@@ -75,9 +82,13 @@ services:
         condition: service_healthy
     environment:
       - RPC_URL=http://anvil:8545
-      - CONTRACT_ADDRESS=0x5FbDB2315678afecb367f032d93F642f64180aa3
+      - ROUTER_CONTRACT_ADDRESS=0x9fe46736679d2d9a65f0992f2272de9f3c7fa6e0
+      - STAKING_CONTRACT_ADDRESS=0xe7f1725e7734ce288f8367e1bb143e90bb3f0512
+      - TOKEN_CONTRACT_ADDRESS=0x5fbdb2315678afecb367f032d93f642f64180aa3
       - PRIVATE_KEY=0xdbda1821b80551c9d65939329250298aa3472ba22feea921c0cf5d620ea67b97
+      - PUBLIC_KEY=0x23618e81E3f5cdF7f54C3d65f7FBc0aBf5B21E8f
       - RUST_LOG=info
+    entrypoint: [ "/bin/sh", "-c", "sleep 15 && /usr/local/bin/nilav_node" ]
     networks:
       - nilav-network
     restart: unless-stopped
@@ -94,10 +105,14 @@ services:
         condition: service_healthy
     environment:
       - RPC_URL=http://anvil:8545
-      - CONTRACT_ADDRESS=0x5FbDB2315678afecb367f032d93F642f64180aa3
+      - ROUTER_CONTRACT_ADDRESS=0x9fe46736679d2d9a65f0992f2272de9f3c7fa6e0
+      - STAKING_CONTRACT_ADDRESS=0xe7f1725e7734ce288f8367e1bb143e90bb3f0512
+      - TOKEN_CONTRACT_ADDRESS=0x5fbdb2315678afecb367f032d93f642f64180aa3
       - PRIVATE_KEY=0x7c852118294e51e653712a81e05800f419141751be58f605c371e15141b007a6
+      - PUBLIC_KEY=0x90F79bf6EB2c4f870365E785982E1f101E93b906
       - NODE_ID=node-2
       - RUST_LOG=info
+    entrypoint: [ "/bin/sh", "-c", "sleep 15 && /usr/local/bin/nilav_node" ]
     networks:
       - nilav-network
     restart: unless-stopped
@@ -114,10 +129,14 @@ services:
         condition: service_healthy
     environment:
       - RPC_URL=http://anvil:8545
-      - CONTRACT_ADDRESS=0x5FbDB2315678afecb367f032d93F642f64180aa3
+      - ROUTER_CONTRACT_ADDRESS=0x9fe46736679d2d9a65f0992f2272de9f3c7fa6e0
+      - STAKING_CONTRACT_ADDRESS=0xe7f1725e7734ce288f8367e1bb143e90bb3f0512
+      - TOKEN_CONTRACT_ADDRESS=0x5fbdb2315678afecb367f032d93f642f64180aa3
       - PRIVATE_KEY=0x47e179ec197488593b187f80a00eb0da91f1b9d0b13f8733639f19c30a34926a
+      - PUBLIC_KEY=0x15d34AAf54267DB7D7c367839AAf71A00a2C6A65
       - NODE_ID=node-3
       - RUST_LOG=info
+    entrypoint: [ "/bin/sh", "-c", "sleep 10 && /usr/local/bin/nilav_node" ]
     networks:
       - nilav-network
     restart: unless-stopped
@@ -134,10 +153,14 @@ services:
         condition: service_healthy
     environment:
       - RPC_URL=http://anvil:8545
-      - CONTRACT_ADDRESS=0x5FbDB2315678afecb367f032d93F642f64180aa3
+      - ROUTER_CONTRACT_ADDRESS=0x9fe46736679d2d9a65f0992f2272de9f3c7fa6e0
+      - STAKING_CONTRACT_ADDRESS=0xe7f1725e7734ce288f8367e1bb143e90bb3f0512
+      - TOKEN_CONTRACT_ADDRESS=0x5fbdb2315678afecb367f032d93f642f64180aa3
       - PRIVATE_KEY=0x8b3a350cf5c34c9194ca85829a2df0ec3153be0318b5e2d3348e872092edffba
+      - PUBLIC_KEY=0x9965507D1a55bcC2695C58ba16FB37d819B0A4dc
       - NODE_ID=node-4
       - RUST_LOG=info
+    entrypoint: [ "/bin/sh", "-c", "sleep 10 && /usr/local/bin/nilav_node" ]
     networks:
       - nilav-network
     restart: unless-stopped
@@ -154,10 +177,14 @@ services:
         condition: service_healthy
     environment:
       - RPC_URL=http://anvil:8545
-      - CONTRACT_ADDRESS=0x5FbDB2315678afecb367f032d93F642f64180aa3
+      - ROUTER_CONTRACT_ADDRESS=0x9fe46736679d2d9a65f0992f2272de9f3c7fa6e0
+      - STAKING_CONTRACT_ADDRESS=0xe7f1725e7734ce288f8367e1bb143e90bb3f0512
+      - TOKEN_CONTRACT_ADDRESS=0x5fbdb2315678afecb367f032d93f642f64180aa3
       - PRIVATE_KEY=0x92db14e403b83dfe3df233f83dfa3a0d7096f21ca9b0d6d6b8d88b2b4ec1564e
+      - PUBLIC_KEY=0x976EA74026E726554dB657fA54763abd0C3a0aa9
       - NODE_ID=node-5
       - RUST_LOG=info
+    entrypoint: [ "/bin/sh", "-c", "sleep 10 && /usr/local/bin/nilav_node" ]
     networks:
       - nilav-network
     restart: unless-stopped
