fix: corrections no to retrieve from block 0

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -34,7 +34,7 @@ jobs:
 
       - name: Build smart contract
         run: |
-          cd contracts/nilav-router
+          cd contracts
           forge build
 
       - name: Run tests
