--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,9 +8,9 @@ license = "MIT"
 
 [dependencies]
 anyhow = "1.0"
-attestation-verification = { git = "https://github.com/NillionNetwork/nilcc", branch = "main", package = "attestation-verification" }
+attestation-verification = { git = "https://github.com/NillionNetwork/nilcc", rev = "a763d97046721e00f732842c4ef398fe8e144623", package = "attestation-verification" }
 base64 = "0.22"
-clap = { version = "4.5", features = ["derive", "env"] }
+clap = { version = "4.5", features = ["derive", "env", "string"] }
 crossterm = "0.29.0"
 ethers = { version = "2.0", features = ["rustls", "ws"] }
 ethers-contract = "2.0"
@@ -22,7 +22,7 @@ ratatui = "0.29"
 reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-sev = { version = "7.1", default-features = false }
+serde_with = { version = "3.16", features = ["hex"] }
 term-table = "1.4"
 tokio = { version = "1.40", features = ["full"] }
 toml = "0.9"
