--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,13 +7,12 @@ license = "MIT"
 
 
 [dependencies]
+alloy = { version = "1.1.3", features = ["full"] }
 anyhow = "1.0"
 attestation-verification = { git = "https://github.com/NillionNetwork/nilcc", rev = "a763d97046721e00f732842c4ef398fe8e144623", package = "attestation-verification" }
 base64 = "0.22"
 clap = { version = "4.5", features = ["derive", "env", "string"] }
 crossterm = "0.29.0"
-ethers = { version = "2.0", features = ["rustls", "ws"] }
-ethers-contract = "2.0"
 futures-util = "0.3"
 getrandom = "0.3"
 hex = "0.4"
