fix: remove appuser in dockerfile to ensure permissions work after setup

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -100,10 +100,7 @@ FROM --platform=$TARGETPLATFORM debian:bookworm-slim AS base_release
 ARG TARGETPLATFORM
 
 RUN apt-get update && apt-get install -y ca-certificates && rm -rf /var/lib/apt/lists/* && \
-    useradd -u 1000 -m appuser && \
-    mkdir -p /app && \
-    chown -R appuser:appuser /app
-USER appuser
+    mkdir -p /app
 WORKDIR /app
 
 # Runtime stage for nilav_node
@@ -114,8 +111,8 @@ ENTRYPOINT ["/usr/local/bin/nilav_node"]
 # Runtime stage for nilcc_simulator
 FROM base_release AS nilcc_simulator
 COPY --from=builder /out/bin/nilcc_simulator /usr/local/bin/nilcc_simulator
-COPY --from=builder --chown=appuser:appuser /app/config /app/config
-COPY --from=builder --chown=appuser:appuser /app/data /app/data
+COPY --from=builder /app/config /app/config
+COPY --from=builder /app/data /app/data
 ENV CONFIG_PATH=/app/config/config.toml
 ENV HTXS_PATH=/app/data/htxs.json
 ENTRYPOINT ["/usr/local/bin/nilcc_simulator"]
