--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,7 +1,7 @@
 // For format details, see https://aka.ms/devcontainer.json. For config options, see the
 // README at: https://github.com/devcontainers/templates/tree/main/src/rust
 {
-	"name": "NilAV - Rust + Foundry",
+	"name": "NilUV - Rust + Foundry",
 	"image": "mcr.microsoft.com/devcontainers/rust:2-1-bookworm",
 
 	"features": {
