--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ reqwest = { version = "0.12", default-features = false, features = ["json", "rus
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 serde_with = { version = "3.16", features = ["hex"] }
+sha2 = "0.10"
 term-table = "1.4"
 tokio = { version = "1.40", features = ["full"] }
 toml = "0.9"
