--- a/contracts/foundry.toml
+++ b/contracts/foundry.toml
@@ -2,12 +2,13 @@
 src = "src"
 out = "out"
 libs = ["lib"]
-solc_version = "0.8.20"
+test = "test"
+solc_version = "0.8.26"
+optimizer = true
+optimizer_runs = 200
+via_ir = true
+
 remappings = [
-  "@openzeppelin/contracts/=lib/openzeppelin-contracts/contracts/",
+  "@openzeppelin/=lib/openzeppelin-contracts/",
   "forge-std/=lib/forge-std/src/"
 ]
-
-[profile.default.dependencies]
-openzeppelin-contracts = "https://github.com/OpenZeppelin/openzeppelin-contracts.git"
-forge-std = "https://github.com/foundry-rs/forge-std.git"
