feat: remove offchain committee selection offloading, add full HTX submission ,and add helper view fns

--- a/.gitignore
+++ b/.gitignore
@@ -26,9 +26,14 @@ Cargo.lock
 # Foundry/Solidity build artifacts
 out/
 cache/
+.foundry-cache/
+.foundry/
 
 # Foundry broadcast logs (transaction traces, run outputs, etc.)
 /broadcast
+
+# Foundry toolchain manager
+.svm/
 
 # Note: foundry.lock should be committed for reproducible builds
 
